Fixed hero-text position on small laptop screen

--- a/css/bowstyle.css
+++ b/css/bowstyle.css
@@ -924,12 +924,12 @@ footer {
     }
     .hero-text {
         width: 20rem;
-        top: 50%;
+        top: 38%;
         left: 80%;
         transform: translate(-40%, -20%);
     }
     .font-large {
-        font-size: 3rem;
+        font-size: 2.5rem;
     }
 
     /* .bc-sidebar.bc-collapse {
@@ -949,7 +949,7 @@ footer {
     }
     .hero-text {
         width: 20rem;
-        top: 45%;
+        top: 40%;
         left: 70%;
         transform: translate(-20%, -10%);
     }
